2008-12-07  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/fontface.cc:
	* cairomm/fontface.h: Change UserFontFace implementation to a vfunc-based
	implementation rather than requiring people to supply callbacks at runtime as
	sigc::slot objects.  This was requested by Ian Britten on the mailing list and
	was my original plan but ran into issues in my original implementation.  This
	isn't a fully-working implementation yet, but I think I can overcome the
	issues now, so I'm moving forward on the redesign.
	* tests/test-font-face.cc: disable UserFontFace tests for now

2008-12-05  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/scaledfont.cc: Fix an error in ScaledFont::get_font_face() where
	we were releasing a reference we didn't hold.
	Also fix a rather severe memory leak where we weren't calling
	cairo_scaled_font_destroy in the ScaledFont destructor.  I added a virtual
	destructor to ScaledFont, which theoretically changes ABI, but I don't see how
	anybody could be using ScaledFont in cairomm currently without serious memory
	leaks, so I think it's worthwhile to make this change

2008-11-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: fix a bunch of compile errors in the win32 surface
	as reported by Paul Goins <general vultaire.net>

2008-11-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: support the --with-boost=[boost_path] option for specifying
	the install path of boost libraries

2008-10-30  Dave Evans <devans@macports.org>

	* cairomm/fontface.h:
	* cairomm/surface.h: fix compile in mac osx by undefining the 'nil' symbol
	before including any sigc++ headers.  In the future this should become
	necessary if sigc++ headers do this directly, but for now work around it in
	cairomm

2008-10-29  Jonathon Jongsma  <jonathon@quotidian.org>

	* Makefile.am: distribute autogen.sh with the tarballs

2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: